--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ a {
   text-decoration: none;
   background-color: transparent;
   color: inherit;
-  cursor: context-menu;
   display: block;
 }
 
@@ -148,6 +147,7 @@ img {
 .service-list-item {
   width: 330px;
   margin-bottom: 100px;
+  padding-left: 60px;
 }
 
 .service-list-item__title {
@@ -157,7 +157,6 @@ img {
   font-weight: 400;
   text-transform: uppercase;
   margin-bottom: 20px;
-  padding-left: 60px;
 }
 
 .service-list-item__text {
@@ -166,7 +165,6 @@ img {
   font-size: 15px;
   font-weight: 400;
   line-height: 24px;
-  padding-left: 60px;
 }
 
 .first {
@@ -211,7 +209,7 @@ img {
 
 .team-description {
   text-align: center;
-  width: 940px;
+  max-width: 940px;
   margin: 0 auto;
   color: #999999;
   font-family: "Roboto";
@@ -296,6 +294,10 @@ img {
   transition: background-color 0.2s linear;
 }
 
+.social-link:not(:last-child) {
+  margin-right: 1px;
+}
+
 .social-link:hover {
   background-color: #95e1d3;
 }
@@ -344,6 +346,7 @@ img {
 }
 
 form {
+  display: flex;
   padding-top: 12px;
   padding-bottom: 12px;
 }
@@ -353,6 +356,11 @@ input {
   padding: 14px;
   border: 1px solid #e7e7e7;
   outline: none;
+  color: #9c9999;
+  font-family: "Roboto";
+  font-size: 15px;
+  font-weight: 400;
+  font-style: italic;
 }
 
 input::placeholder {
@@ -373,4 +381,5 @@ input::placeholder {
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
+  outline: none;
 }
